deps/src/onemkl.h

// BLAS types
typedef enum {
    ONEMKL_TRANSPOSE_NONTRANS,
    ONEMKL_TRANSPOSE_TRANS,
    ONEMLK_TRANSPOSE_CONJTRANS
} onemklTranspose;
int onemklSgemm(syclQueue_t device_queue, onemklTranspose transa, onemklTranspose transb, int64_t
                m, int64_t n, int64_t k, float *alpha, float *a, int64_t lda, float *b, int64_t ldb,
                float *beta, float *c, int64_t ldc);
int onemklDgemm(syclQueue_t device_queue, onemklTranspose transa, onemklTranspose transb, int64_t
                m, int64_t n, int64_t k, double *alpha, double *a, int64_t lda, double *b, int64_t ldb,
                double *beta, double *c, int64_t ldc);
int onemklCgemm(syclQueue_t device_queue, onemklTranspose transa, onemklTranspose transb, int64_t
                m, int64_t n, int64_t k, float _Complex *alpha, float _Complex *a, int64_t lda, float
                _Complex *b, int64_t ldb, float _Complex *beta, float _Complex *c, int64_t ldc);
int onemklZgemm(syclQueue_t device_queue, onemklTranspose transa, onemklTranspose transb, int64_t
                m, int64_t n, int64_t k, double _Complex *alpha, double _Complex *a, int64_t lda,
                double _Complex *b, int64_t ldb, double _Complex *beta, double _Complex *c, int64_t
                ldc);
int onemklSnrm2(syclQueue_t device_queue, int64_t n, float *x, int64_t incx, float *result);
int onemklDnrm2(syclQueue_t device_queue, int64_t n, double *x, int64_t incx, double *result);
int onemklCnrm2(syclQueue_t device_queue, int64_t n, float _Complex *x, int64_t incx, float *result);
int onemklZnrm2(syclQueue_t device_queue, int64_t n, double _Complex *x, int64_t incx, double
                *result);